Move material design lite method upgradeDOM to App component and solve initial height is too low issue

--- a/src/components/Navigation/_Navigation.css
+++ b/src/components/Navigation/_Navigation.css
@@ -10,4 +10,7 @@
 	&__header-title {
 		vertical-align: middle;
 	}
+	&__link--active {
+		font-weight: bold;
+	}
 }
